feat: create vite server

--- a/packages/vite_config/package.json
+++ b/packages/vite_config/package.json
@@ -12,5 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "devDependencies": {
+    "less": "^4.2.0"
+  }
 }
