--- a/packages/vite_config/package.json
+++ b/packages/vite_config/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "less": "^4.2.0",
+    "vite-plugin-compression2": "^1.1.3",
     "vite-plugin-mock": "^3.0.2"
   },
   "dependencies": {
