--- a/packages/vite_config/package.json
+++ b/packages/vite_config/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-mock": "^3.0.2"
   },
   "dependencies": {
+    "fast-glob": "^3.3.2",
     "mockjs": "^1.1.0",
     "postcss-preset-env": "^9.6.0",
     "ramda": "^0.30.1"
