--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite": "^5.3.1"
   },
   "dependencies": {
-    "@types/node": "^20.14.9"
+    "@types/node": "^20.14.9",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
